tegel/src/components/button/button.scss
@import './button-theme-vars.scss';

.sdds-on-white-bg {
  --sdds-btn-primary-background-disabled: var(--sdds-btn-primary-on-white-background-disabled);
  --sdds-btn-danger-background-disabled: var(--sdds-btn-danger-on-white-background-disabled);
}

$btn-lg-height: 14rem;
$btn-md-height: 12rem;
$btn-sm-height: 10rem;
$btn-xs-height: 8rem;
$types: (primary, secondary, ghost, danger);
$props: (background, border-color, color, outline-color);

@mixin button-base {
  font: var(--sdds-detail-02);
  letter-spacing: var(--sdds-detail-02-ls);
  display: flex;
  align-items: center;
  border-radius: 1rem;
  border: none;
  box-shadow: none;
  position: relative;
  text-decoration: none;
  cursor: pointer;
}

.sdds-btn {
  @include button-base;

  height: $btn-lg-height;
  padding: var(--sdds-spacing-element-20);
  border: 1px solid;

  &:disabled,
  &.disabled {
    cursor: unset;
  }

  &:focus {
    // TODO: decide on what tod o with these @include sdds-focus-state;
    outline: 2px solid var(--sdds-blue-400);
    outline-offset: -2px;
  }

  .sdds-btn-icon,
  &.sdds-btn-icon {
    fill: var(--sdds-grey-50);
    color: var(--sdds-grey-50);
    font-size: 4rem; //16px
  }

  span + .sdds-btn-icon {
    margin-left: var(--sdds-spacing-element-16);
    width: 16px;
    height: 16px;
    line-height: 0;
  }

  &.sdds-btn-xs {
    padding: var(--sdds-spacing-element-8);
    height: $btn-xs-height;

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }
  }

  &.sdds-btn-sm {
    padding: var(--sdds-spacing-element-12);
    height: $btn-sm-height;

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span + .sdds-btn-icon {
      margin-left: var(--sdds-spacing-element-24);
    }
  }

  &.sdds-btn-md {
    padding: var(--sdds-spacing-element-16);
    height: $btn-md-height;

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span + .sdds-btn-icon {
      margin-left: var(--sdds-spacing-element-20);
    }
  }

  &.sdds-btn-lg {
    padding: var(--sdds-spacing-element-20);
    height: $btn-lg-height;

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span + .sdds-btn-icon {
      margin-left: 7rem;
    }
  }

  &.sdds-btn-fullbleed {
    width: inherit;
    text-align: center;

    .sdds-btn-icon,
    &.sdds-btn-icon {
      margin-left: var(--sdds-spacing-element-8);
    }
  }

  span {
    align-self: baseline;
  }

  @each $type in $types {
    &.sdds-btn-#{$type} {
      @each $prop in $props {
        #{$prop}: var(--sdds-btn-#{$type}-#{$prop});
      }

      &:hover {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-hover);
        }
      }

      &:focus {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-focus);
        }
      }

      &:active,
      &.active {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-active);
        }
      }

      &.disabled,
      &:disabled {
        @each $prop in $props {
          cursor: not-allowed;
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-disabled);

          .sdds-btn-icon,
          &.sdds-btn-icon {
            color: var(--sdds-grey-300);
          }
        }
      }
    }
  }
}

:host(sdds-button) {
  display: flex;
  align-items: center;

  ::slotted([slot='icon']) {
    width: var(--sdds-spacing-element-16);
    height: var(--sdds-spacing-element-16);
  }
}

:host(sdds-button[onlyIcon='false']) {
  display: flex;
  align-items: center;

  .sdds-btn-sm {
    ::slotted([slot='icon']) {
      margin-left: var(--sdds-spacing-element-24);
      width: var(--sdds-spacing-element-16);
      height: var(--sdds-spacing-element-16);
    }
  }

  .sdds-btn-md {
    ::slotted([slot='icon']) {
      margin-left: var(--sdds-spacing-element-20);
      width: var(--sdds-spacing-element-16);
      height: var(--sdds-spacing-element-16);
    }
  }

  .sdds-btn-lg {
    ::slotted([slot='icon']) {
      margin-left: 7rem;
      width: var(--sdds-spacing-element-16);
      height: var(--sdds-spacing-element-16);
    }
  }
}

